# simplemtricwriter

./: .gitignore  CMakeLists.txt  README.md  metric_logger.h
.github/workflows/: ci.yml
example/: demo.cpp
include/: metric_logger.h
tests/: test.py
